# iterative-solver

./: .gitlab-ci.yml  ArrayHandlerDDiskDistr_8h_source.html  ArrayHandlerDDiskSparse_8h_source.html  ArrayHandlerDDisk_8h_source.html  ArrayHandlerDefault_8h_source.html  ArrayHandlerDistrDDisk_8h_source.html  ArrayHandlerDistrSparse_8h_source.html  ArrayHandlerDistr_8h_source.html  ArrayHandlerIterableSparse_8h_source.html  ArrayHandlerIterable_8h_source.html  ArrayHandlerSparse_8h_source.html  ArrayHandler_8h_source.html  ArrayHandlers_8h_source.html  BufferManager_8h_source.html  CMakeLists.txt  CastOptions_8h_source.html  DSpaceResetter_8h_source.html  DSpace_8h_source.html  DavidsonOptions_8h_source.html  Dimensions_8h_source.html  DistrArrayDisk_8h_source.html  DistrArrayFile_8h_source.html  DistrArrayGA_8h_source.html  DistrArrayHDF5_8h_source.html  DistrArrayMPI3_8h_source.html  DistrArraySpan_8h_source.html  DistrArray_8h_source.html  DistrFlags_8h_source.html  Distribution_8h_source.html  Dockerfile  ExampleProblemDistrArray_8h-example.html  ExampleProblem_8h-example.html  HDF5Handle_8h_source.html  ISubspaceSolver_8h_source.html  IXSpace_8h_source.html  Interpolate_8h_source.html  IterativeSolverC_8h_source.html  IterativeSolverTemplate_8h_source.html  IterativeSolver_8h_source.html  LinearEigensystemDavidsonOptions_8h_source.html  (+638 more)
.github/workflows/: build-and-test.yml  test-python.yml
DoxygenTagFiles/: iterative-solver.tag
benchmark/: ArrayBenchmark.h  CMakeLists.txt  benchmark.cpp  quad_precision_benchmark.cpp
dependencies/: CMakeLists.txt  profiler_SHA1  utilities_SHA1
doc/: CMakeLists.txt  IterativeSolver.dox
docker/: Dockerfile
example/: CMakeLists.txt  LinearEigensystemBenchmarkF.F90
examples/: CMakeLists.txt  CustomizedLoggingExample.cpp  ExampleProblem.h  ExampleProblemDistrArray.h  LinearEigensystemDistrArrayExample.cpp  LinearEigensystemExample-mpi.cpp  LinearEigensystemExample.cpp  LinearEigensystemExampleF-Pspace.F90  LinearEigensystemExampleF-problem.F90  LinearEigensystemExampleF.F90  LinearEigensystemMultirootExample.cpp  LinearEigensystemSpanExample.cpp  LinearEquationsExample.cpp  LinearEquationsExampleF-matrix.F90  LinearEquationsExampleF.F90  NonLinearEquationsExample.cpp  NonLinearExampleF.F90  OptimizeDistrArrayExample.cpp  OptimizeExample.cpp  OptimizeExampleF-problem.F90  SolverFactory_implementation.cpp
examples/experiments/: CMakeLists.txt  Problem1.h  experiment1.cpp
examples/foreign-container/: solve-with-foreign-container.cpp
lib/: CMakeLists.txt  IterativeSolver.cpp  IterativeSolver.h  IterativeSolverF.F90  OutOfCoreArray.h  PagedVector.h  libconfig.cmake
python/: LinearEigensystemExample.ipynb  LinearEigensystemExample.py  OptimizeExample.ipynb  build.sh  setup.py  test-linux.sh
python/iterative_solver/: __init__.py  example_problems.py  iterative_solver.py  iterative_solver_extension.pxd  iterative_solver_extension.pyx  matrix_problem.py  problem.py  pspace.py
python/test/: test_optimize.py  test_rayleigh_quotient.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+105 more)
src/: CMakeLists.txt
src/molpro/linalg/: CMakeLists.txt  IterativeSolver.h  IterativeSolverC.h  IterativeSolverCMPI.cpp  IterativeSolverCSerial.cpp  IterativeSolverF.F90  Iterative_Solver_Matrix_Problem.F90  Iterative_Solver_PSpace.F90  Iterative_Solver_Problem.F90  options.cpp  options.h
src/molpro/linalg/array/: ArrayFile.cpp  ArrayFile.h  ArrayHandler.h  ArrayHandlerDDisk.h  ArrayHandlerDDiskDistr.h  ArrayHandlerDDiskSparse.h  ArrayHandlerDefault.h  ArrayHandlerDistr.h  ArrayHandlerDistrDDisk.h  ArrayHandlerDistrSparse.h  ArrayHandlerIterable.h  ArrayHandlerIterableSparse.h  ArrayHandlerSparse.h  BlockReader.cpp  BlockReader.h  BufferedReader.cpp  BufferedReader.h  CMakeLists.txt  DistrArray-implementation.h  DistrArray.cpp  DistrArray.h  DistrArrayDisk-implementation.h  DistrArrayDisk.cpp  DistrArrayDisk.h  DistrArrayFile-implementation.h  DistrArrayFile.cpp  DistrArrayFile.h  DistrArrayGA-implementation.h  DistrArrayGA.cpp  DistrArrayGA.h  DistrArrayHDF5-implementation.h  DistrArrayHDF5.cpp  DistrArrayHDF5.h  DistrArrayMPI3-implementation.h  DistrArrayMPI3.cpp  DistrArrayMPI3.h  DistrArraySpan-implementation.h  DistrArraySpan.cpp  DistrArraySpan.h  HDF5Handle.cpp  (+5 more)
src/molpro/linalg/array/util/: BlockReader.h  BufferManager.h  BufferedReader.h  CMakeLists.txt  DistrFlags.cpp  Distribution.h  LockMPI3.cpp  LockMPI3.h  ScopeLock.h  Task.h  gather_all.h  gemm.h  iterable_lingalg.cpp  iterable_lingalg.h  select.h  select_max_dot.cpp  select_max_dot.h  temp_file.cpp
src/molpro/linalg/iterativesolver/: helper-implementation.h
src/molpro/linalg/itsolv/: CMakeLists.txt  DSpaceResetter.h  DavidsonOptions.cpp  DavidsonOptions.h  Interpolate.cpp  Interpolate.h  IterativeSolver-double.cpp  IterativeSolver.h  IterativeSolverTemplate.h  LinearEigensystemDavidson.h  LinearEigensystemDavidsonOptions.cpp  LinearEigensystemDavidsonOptions.h  LinearEigensystemRSPT.h  LinearEquationsDavidson.h  LinearEquationsDavidsonOptions.cpp  LinearEquationsDavidsonOptions.h  Logger.h  NonLinearEquationsDIIS.h  OptimizeBFGS.h  OptimizeSD.h  Options.cpp  Options.h  helper-implementation.h  helper.h  propose_rspace.h  qspace_options.h  rspace_options.h
src/molpro/linalg/itsolv/subspace/: CMakeLists.txt  Dimensions.h  ISubspaceSolver.h  IXSpace.h  Matrix.h  QSpace.h  SubspaceSolverDIIS.h  SubspaceSolverLinEig.h  SubspaceSolverOptBFGS.h  SubspaceSolverOptSD.h  SubspaceSolverRSPT.h  XSpace.h
test/: CMakeLists.txt  IterativeSolver-test.cpp  LinearEigensystem-file-test.cpp  LinearEigensystem-test.cpp  TestIterativeSolver.cpp
test/array/: CMakeLists.txt  (+21 more)
(+13 files in other folders)
