LibraryManager_Append(${PROJECT_NAME}
    SOURCES
        DavidsonOptions.cpp
        LinearEigensystemDavidsonOptions.cpp
        LinearEigensystemRSPTOptions.cpp
        LinearEquationsDavidsonOptions.cpp
        OptimizeBFGSOptions.cpp
        OptimizeSDOptions.cpp
        Options.cpp
        util.cpp
        Interpolate.cpp
        NonLinearEquationsDIISOptions.cpp
    PUBLIC_HEADER
        CastOptions.h
        DavidsonOptions.h
        DSpaceResetter.h
        IterativeSolverTemplate.h
        LinearEigensystemDavidson.h
        LinearEigensystemRSPT.h
        LinearEigensystemRSPTOptions.h
        LinearEquationsDavidsonOptions.h
        NonLinearEquationsDIIS.h
        OptimizeBFGS.h
        OptimizeBFGSOptions.h
        OptimizeSD.h
        OptimizeSDOptions.h
        Options.h
        SolverFactory-implementation.h
        options_map.h
        propose_rspace.h
        util.h
        wrap.h
        wrap_util.h
        IterativeSolver.h
        Interpolate.h
        LinearEigensystemDavidsonOptions.h
        LinearEquationsDavidson.h
        Logger.h
        NonLinearEquationsDIISOptions.h
        SolverFactory.h
)
add_subdirectory(subspace)
